RESOLVED FIXED165435
After preventing a beforeinput event, an input event is fired when formatting rich text
https://bugs.webkit.org/show_bug.cgi?id=165435
Summary After preventing a beforeinput event, an input event is fired when formatting...
Wenson Hsieh
Reported 2016-12-05 16:41:00 PST
To reproduce: 1. Go to whsieh.github.io/examples/input-events 2. Type some text 3. Check 'formatBold' on the side 4. Select the text and use the context menu to bold it Expected: beforeinput event fired, but no input event Observed: both events are fired
Attachments
Patch (5.71 KB, patch)
2016-12-05 17:00 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-12-05 16:45:15 PST
Wenson Hsieh
Comment 2 2016-12-05 17:00:20 PST
WebKit Commit Bot
Comment 3 2016-12-06 20:37:22 PST
Comment on attachment 296222 [details] Patch Clearing flags on attachment: 296222 Committed r209445: <http://trac.webkit.org/changeset/209445>
WebKit Commit Bot
Comment 4 2016-12-06 20:37:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.